--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="css/holo-dark/stack.css" />
 		<link rel="stylesheet" href="css/holo-dark/tabs.css" />
 		<link rel="stylesheet" href="css/holo-dark/toasts.css" />
+		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
 		<!-- All your pages must be wrapped in a div.page so that stack.js works -->
@@ -30,16 +31,15 @@
 
 			<header class="action-bar fixed-top">
 				<a href="javascript: void(0);" class="app-icon action" data-ignore="true"> <i class="icon-fries"></i> </a>
-
 				<h2 class="title">Projects <span class="subtitle">Recently used</span></h2>
 
 				<!-- Add action buttons here -->
 				<ul class="actions pull-right">
 					<li>
-						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-search"></i></a>
+						<a href="javascript: void(0);" class="action" title="New Project"><i class="icon-new"></i></a>
 					</li>
 					<li>
-						<a href="javascript: void(0);" class="action" title="Copy"><i class="icon-copy"></i></a>
+						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-search"></i></a>
 					</li>
 					<li>
 						<a href="javascript: void(0);" class="action" title="Cut"><i class="icon-cut"></i></a>
@@ -52,19 +52,54 @@
 
 			<div class="content">
 
-				<!-- Add anything here -->
-
 			</div>
 
 			<div class="dialogs">
 				<!-- This is a requried container for your dialogs. All dialogs that you want to display in this page go here -->
 			</div>
-
+			
 		</div>
+		<script id="project-li-temp" type="x-handlebars-template">
+			<ul id="projects" class="list">	
+			{{#each this}}
+				<li class="list-item-two-lines">
+					<h3>{{title}}</h3>
+					<p>
+						{{category}} <span class="pull-right">{{type}}</span>
+					</p>
+				</li>
+			{{/each}}
+			</ul>
+		</script> 
 		<script src="lib/fries.js"></script>
 		<script src="lib/jquery-1.8.2.min.js"></script>
+		<script src="lib/handlebars.js"></script>
 		<script src="js/storage/memory-store.js"></script>
 		<script src="lib/fingerblast.js"></script>
+		<script src="js/main.js"></script>
 		<script src="phonegap.js"></script>
+		<script>
+			$(function() {
+				var projects = [{
+					title : "The Art of War - Implications for the modern warfare",
+					category : "Essay",
+					type : "Private"
+				}, {
+					title : "The Art of War - Implications for the modern warfare",
+					category : "Essay",
+					type : "Private"
+				}, {
+					title : "The Art of War - Implications for the modern warfare",
+					category : "Essay",
+					type : "Private"
+				}];
+				//Get the HTML from the template   in the script tag
+				var theTemplateScript = $("#project-li-temp").html();
+
+				//Compile the template
+				var theTemplate = Handlebars.compile(theTemplateScript);
+				$(".content").append(theTemplate(projects));
+			});
+		</script>
 	</body>
 </html>
