Added new templates and dropped Stack.js.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- "Add to homescreen" support -->
 		<meta name="mobile-web-app-capable" content="yes">
 
-		<title>Fries Template</title>
+		<title>LIBerator</title>
 
 		<link rel="stylesheet" href="css/holo-dark/base.css" />
 		<link rel="stylesheet" href="css/holo-dark/animations.css" />
@@ -26,14 +26,11 @@
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-		<!-- All your pages must be wrapped in a div.page so that stack.js works -->
-		<div class="page">
-
+		<script id="projects-nav-temp" type="x-handlebars-template">
 			<header class="action-bar fixed-top">
 				<a href="javascript: void(0);" class="app-icon action" data-ignore="true"> <i class="icon-fries"></i> </a>
 				<h2 class="title">Projects <span class="subtitle">Recently used</span></h2>
 
-				<!-- Add action buttons here -->
 				<ul class="actions pull-right">
 					<li>
 						<a href="javascript: void(0);" class="action" title="New Project"><i class="icon-new"></i></a>
@@ -49,57 +46,71 @@
 					</li>
 				</ul>
 			</header>
-
-			<div class="content">
-
-			</div>
-
-			<div class="dialogs">
-				<!-- This is a requried container for your dialogs. All dialogs that you want to display in this page go here -->
-			</div>
-			
-		</div>
+		</script>
 		<script id="project-li-temp" type="x-handlebars-template">
-			<ul id="projects" class="list">	
-			{{#each this}}
+			<div class="content">
+			<ul id="projects" class="list">
+				{{#each this}}
 				<li class="list-item-two-lines">
-					<h3>{{title}}</h3>
-					<p>
-						{{category}} <span class="pull-right">{{type}}</span>
-					</p>
+					<a href="#project/{{id}}">
+						<h3>{{title}}</h3>
+						<p>
+							{{category}} <span class="pull-right">{{type}}</span>
+						</p>
+					</a>
 				</li>
-			{{/each}}
+				{{/each}}
 			</ul>
+			</div>
+		</script>
+		<script id="project-nav-temp" type="x-handlebars-template">
+			<header class="action-bar fixed-top">
+				<a href="#" class="app-icon action" data-ignore="true"> 
+					<i class="icon-up-button"></i>
+					<i class="icon-fries"></i> 
+				</a>
+				<h2 class="title">Sources <span class="subtitle">Recently used</span></h2>
+
+				<ul class="actions pull-right">
+					<li>
+						<a href="javascript: void(0);" class="action" title="New Project"><i class="icon-new"></i></a>
+					</li>
+					<li>
+						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-search"></i></a>
+					</li>
+					<li>
+						<a href="javascript: void(0);" class="action" title="Cut"><i class="icon-cut"></i></a>
+					</li>
+					<li>
+						<a href="javascript: void(0);" class="action" title="Settings"><i class="icon-settings"></i></a>
+					</li>
+				</ul>
+			</header>
 		</script> 
+		<script id="project-sources-li-temp" type="x-handlebars-template">
+			<div class="content">
+			<ul id="projects" class="list">
+				<li class="list-divider">
+					{{title}}
+				</li>
+				{{#each this.sources}}
+				<li class="list-item-two-lines">
+					<a href="#source/{{sourceId}}">
+						{{source-item}}
+					</a>
+				</li>
+				{{/each}}
+			</ul>
+			</div>
+		</script>
 		<script src="lib/fries.js"></script>
 		<script src="lib/jquery-1.8.2.min.js"></script>
 		<script src="lib/handlebars.js"></script>
-		<script src="js/storage/memory-store.js"></script>
 		<script src="lib/fingerblast.js"></script>
+		<script src="js/storage/memory-store.js"></script>
+		<script src="js/ProjectsView.js"></script>
+		<script src="js/ProjectView.js"></script>
 		<script src="js/main.js"></script>
 		<script src="phonegap.js"></script>
-		<script>
-			$(function() {
-				var projects = [{
-					title : "The Art of War - Implications for the modern warfare",
-					category : "Essay",
-					type : "Private"
-				}, {
-					title : "The Art of War - Implications for the modern warfare",
-					category : "Essay",
-					type : "Private"
-				}, {
-					title : "The Art of War - Implications for the modern warfare",
-					category : "Essay",
-					type : "Private"
-				}];
-				//Get the HTML from the template   in the script tag
-				var theTemplateScript = $("#project-li-temp").html();
-
-				//Compile the template
-				var theTemplate = Handlebars.compile(theTemplateScript);
-				$(".content").append(theTemplate(projects));
-			});
-		</script>
 	</body>
 </html>
