--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
 					<i class="icon-fries"></i> 
 				</a>
 				<h2 class="title">Sources <span class="subtitle">Recently used</span></h2>
-
-				<ul class="actions pull-right">
+			</header>
+			<header class="action-bar fixed-bottom">
+				<ul class="actions flex" data-overflow="false">
 					<li>
-						<a href="javascript: void(0);" class="action" title="New Project"><i class="icon-new"></i></a>
+						<a href="#project/{{id}}/addsource" class="action" title="New Project"><i class="icon-new"></i></a>
+					</li>
+					<li>
+						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-group"></i></a>
 					</li>
 					<li>
 						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-search"></i></a>
@@ -101,7 +105,7 @@
 
 				<ul class="actions pull-right">
 					<li>
-						<a href="javascript: void(0);" id="submit-action" class="action" title="New Project"><i class="icon-accept"></i></a>
+						<a href="#" id="submit-action" class="action" title="New Project"><i class="icon-accept"></i></a>
 					</li>
 				</ul>
 			</header>
@@ -178,6 +182,42 @@
 						</ul>
 					</div>
 		</script>
+		<script id="addsources-nav-temp" type="x-handlebars-template">
+			<header class="action-bar fixed-top">
+				<a href="#project/{{id}}" class="app-icon action"> 
+					<i class="icon-up-button"></i>
+					<i class="icon-fries"></i> 
+				</a>
+				<h2 class="title">Add Source <span class="subtitle">Recently used</span></h2>
+
+				<ul class="actions pull-right">
+					<li>
+						<a href="#project/{{id}}" id="add-source-action" class="action" title="Add Source">
+							<i class="icon-accept"></i>
+						</a>
+					</li>
+				</ul>
+			</header>
+			<header class="action-bar fixed-bottom">
+				<ul class="actions flex" data-overflow="false">
+					<li>
+						<a href="javascript: void(0);" class="action" title="New Source"><i class="icon-new"></i></a>
+					</li>
+					<li>
+						<a href="javascript: void(0);" class="action" title="Search"><i class="icon-search"></i></a>
+					</li>
+				</ul>
+			</header>
+		</script> 
+		<script id="sources-li-temp" type="x-handlebars-template">
+			<div class="content">
+			<ul id="sources" class="list">
+				{{#each resources}}
+					{{library-source-item}}				
+				{{/each}}
+			</ul>
+			</div>
+		</script>
 		<script src="lib/jquery-1.8.2.min.js"></script>
 		<script src="lib/handlebars.js"></script>
 		<script src="lib/fries.js"></script>    
@@ -186,6 +226,7 @@
 		<script src="js/ProjectsView.js"></script>
 		<script src="js/ProjectView.js"></script>
 		<script src="js/NewProjectView.js"></script>
+		<script src="js/AddSourceView.js"></script>
 		<script src="js/main.js"></script>
 		<script src="phonegap.js"></script>
 	</body>
