Changed app icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<body>
 		<script id="projects-nav-temp" type="x-handlebars-template">
 			<header class="action-bar fixed-top">
-				<a href="javascript: void(0);" class="app-icon action" data-ignore="true"> <i class="icon-fries"></i> </a>
+				<a href="javascript: void(0);" class="app-icon action" data-ignore="true"> <i class="icon-copy"></i> </a>
 				<h2 class="title">Projects <span class="subtitle">Recently used</span></h2>
 
 				<ul class="actions pull-right">
@@ -61,7 +61,7 @@
 			<header class="action-bar fixed-top">
 				<a href="#" class="app-icon action"> 
 					<i class="icon-up-button"></i>
-					<i class="icon-fries"></i> 
+					<i class="icon-copy"></i> 
 				</a>
 				<h2 class="title">Sources <span class="subtitle">Recently used</span></h2>
 			</header>
@@ -99,7 +99,7 @@
 			<header class="action-bar fixed-top">
 				<a href="#" class="app-icon action"> 
 					<i class="icon-up-button"></i>
-					<i class="icon-fries"></i> 
+					<i class="icon-copy"></i> 
 				</a>
 				<h2 class="title">New Project <span class="subtitle">Create a new project</span></h2>
 
@@ -186,7 +186,7 @@
 			<header class="action-bar fixed-top">
 				<a href="#project/{{id}}" class="app-icon action"> 
 					<i class="icon-up-button"></i>
-					<i class="icon-fries"></i> 
+					<i class="icon-copy"></i> 
 				</a>
 				<h2 class="title">Add Source <span class="subtitle">Recently used</span></h2>
 
@@ -222,7 +222,7 @@
 			<header class="action-bar fixed-top">
 				<a href="#project/{{id}}/addsource" class="app-icon action"> 
 					<i class="icon-up-button"></i>
-					<i class="icon-fries"></i> 
+					<i class="icon-copy"></i> 
 				</a>
 				<h2 class="title">New Source <span class="subtitle">Create a new source.</span></h2>
 
@@ -298,7 +298,7 @@
 			<header class="action-bar fixed-top">
 				<a href="javascript: window.history.back();" class="app-icon action"> 
 					<i class="icon-up-button"></i>
-					<i class="icon-fries"></i> 
+					<i class="icon-copy"></i> 
 				</a>
 				<h2 class="title">Abstracted function! <span class="subtitle">Included in full version</span></h2>
 			</header>
